[package]
name = "countdown-tui"
version = "0.1.3"
edition = "2021"
description = "A terminal countdown timer with big digital display"
license = "MIT"
repository = "https://github.com/Med0paW/countdown-tui"
keywords = ["cli", "timer", "countdown", "terminal", "tui"]
categories = ["command-line-utilities"]
authors = ["Med0paW <medopaw@gmail.com>"]
readme = "README.md"

[[bin]]
name = "countdown-tui"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
